fixed sidebar on smaller screens

--- a/client/src/components/form/Form.module.css
+++ b/client/src/components/form/Form.module.css
@@ -19,8 +19,10 @@
 }
 
 .formWrapper {
-  width: 50.4rem;
-  margin: 4.8rem auto 0;
+  width: 60.7rem;
+  margin: 4.8rem auto 0 auto;
+  padding-left: 10.3rem;
+  padding-bottom: 2.4rem;
 }
 
 .formHeading {
@@ -224,4 +226,13 @@ small {
 
 .btnDel:hover path {
   fill: hsl(0, 80%, 63%);
+}
+
+/* ****************************** */
+@media (max-width: 850px) {
+  .formWrapper {
+    width: 50.4rem;
+    margin-top: 12.8rem;
+    padding-left: 0;
+  }
 }
