--- a/client/src/components/form/Modal.module.css
+++ b/client/src/components/form/Modal.module.css
@@ -24,3 +24,10 @@
 
   overflow: hidden;
 }
+
+/* ****************************** */
+@media (max-width: 850px) {
+  .modal {
+    width: 62rem;
+  }
+}
