--- a/client/src/components/layout/Layout.module.css
+++ b/client/src/components/layout/Layout.module.css
@@ -17,6 +17,8 @@
 }
 
 .aside {
+  z-index: 50;
+
   flex: 0 0 10.3rem;
 }
 
